--- a/forms.html
+++ b/forms.html
@@ -4,17 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registration Form</title>
-  <style>
-    table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-      padding: 8px;
-    }
-    table {
-      margin-top: 20px;
-      width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="form.css" />
 </head>
 <body>
   <h1>Registration Form</h1>
@@ -22,32 +12,26 @@
   <form id="registerForm">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required />
-    <br />
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required />
-    <br />
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required />
-    <br />
 
     <label>Gender:</label>
     <input type="radio" name="gender" value="male" required /> Male
     <input type="radio" name="gender" value="female" required /> Female
-    <br />
 
     <label>Hobbies:</label>
     <input type="checkbox" name="hobby" value="coding" /> Coding
     <input type="checkbox" name="hobby" value="music" /> Music
-    <br />
 
     <label for="city">City:</label>
     <select id="city" name="city" required>
       <option value="delhi">Delhi</option>
       <option value="mumbai">Mumbai</option>
     </select>
-    <br /><br />
 
     <input type="submit" value="Register" />
   </form>
@@ -61,7 +45,6 @@
     <tbody></tbody>
   </table>
 
-  <!-- JavaScript link -->
-  <script src="script.js"></script>
+  <script src="form.js"></script>
 </body>
 </html>
